<?xml version="1.0"?>
<package format="2">
  <name>bebop_demo</name>
  <version>0.0.1</version>
  <description>
  try_out for sending vel commands
  </description>

  <maintainer email="boomboom@gmail.com">blabla</maintainer>

  <license>Closed</license>

  <url type="website">https://github.com/BosMathias/BosRepo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
